--- a/bower.json
+++ b/bower.json
@@ -4,10 +4,11 @@
   "authors": "",
   "private": true,
   "dependencies": {
-    "angular": "^1.3.12",
+    "angular": "1.5.0",
     "angular-ui-router": "^0.2.11",
     "angular-animate": "^1.3.0",
-    "foundation": "~5.5.1"
+    "foundation": "~5.5.1",
+    "moment": "^2.13.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.2.23"
