--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "repository": "",
+  "engines": {
+    "node": ">=0.10.26",
+    "npm": ">=1.4.3"
+  },
   "devDependencies": {
+    "angular-mocks": "^1.5.5",
     "body-parser": "^1.5.2",
     "bower": "^1.3.1",
     "del": "^1.1.1",
@@ -12,11 +17,11 @@
     "gulp": "^3.8.10",
     "gulp-angular-filesort": "^1.0.4",
     "gulp-concat": "^2.4.3",
-    "gulp-debug": "^2.7.0",
+    "gulp-debug": "^2.1.0",
     "gulp-htmlhint": "0.0.9",
     "gulp-htmlmin": "^1.0.0",
     "gulp-inject": "^1.1.1",
-    "gulp-intercept": "^2.7.0",
+    "gulp-intercept": "^0.1.0",
     "gulp-jshint": "^1.9.2",
     "gulp-livereload": "^3.7.0",
     "gulp-load-plugins": "^0.8.0",
@@ -29,11 +34,17 @@
     "gulp-sass": "^2.3.1",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.1.0",
+    "jasmine": "^2.4.1",
+    "jasmine-core": "^2.4.1",
     "jshint-stylish": "^1.0.0",
-    "karma": "^0.10",
+    "karma": "^0.13.22",
+    "karma-jasmine": "^1.0.2",
     "karma-junit-reporter": "^0.2.2",
+    "karma-ng-html2js-preprocessor": "^1.0.0",
+    "karma-phantomjs-launcher": "^1.0.0",
     "main-bower-files": "^2.5.0",
     "method-override": "^2.1.2",
+    "phantomjs-prebuilt": "^2.1.7",
     "protractor": "^1.1.1",
     "q": "^1.1.2",
     "shelljs": "^0.2.6"
