--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-sass": "^2.3.1",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.1.0",
+    "http-proxy-middleware": "^0.15.0",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
     "jshint-stylish": "^1.0.0",
