--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-livereload": "^3.7.0",
     "gulp-load-plugins": "^0.8.0",
     "gulp-minify-css": "^0.4.5",
+    "gulp-ng-annotate": "^2.0.0",
     "gulp-ng-html2js": "^0.1.8",
     "gulp-nodemon": "^1.0.5",
     "gulp-order": "^1.1.1",
